# untis-scraping-v2

scrape/: Cargo.toml  config.toml
scrape/src/: cli.rs  config.rs  main.rs
scrape/src/untis/: api.rs
